<resources>
    <string name="app_name">TECH4300A2</string>

    <!-- Indicator of User Selection. All this just because I didn't want to use the UI default radio button -->
    <!-- Q2 & Q6 -->
    <string name="trueSelected">👉 True</string>
    <string name="falseSelected">👉 False</string>

    <!-- Q3 -->
    <string name="q3Option1Selected">👉 5</string>
    <string name="q3Option2Selected">👉 6</string>
    <string name="q3Option3Selected">👉 4</string>

    <!-- Q4 -->
    <string name="q4Option1Selected">👉 6</string>
    <string name="q4Option2Selected">👉 9</string>
    <string name="q4Option3Selected">👉 7</string>

    <string name="submitQuiz">Check Results!</string>
    <string name="resetQuiz">Reset Quiz</string>


    <!-- Main Activity -->
    <string name="appTitle">Monster Math</string>
    <string name="appSubtitle">Help Zogg &amp; Friends to solve this quiz</string>

    <!-- Q1 -->
    <string name="q1Number">0</string>
    <string name="q1Label">Label</string>
    <string name="q1OperationText">Operation Text</string>
    <string name="q1OpText1">Text 1</string>
    <string name="q1OpText2">Text 2</string>
    <string name="q1Feedback" />

    <!-- Q2 -->
    <string name="q2Number">0</string>
    <string name="q2Label">Label</string>
    <string name="q2OperationText">Operation Text</string>
    <string name="q2BtnTrue">True</string>
    <string name="q2BtnFalse">False</string>
    <string name="q2Feedback" />

    <!-- Q3 -->
    <string name="q3Number">0</string>
    <string name="q3Label">Label</string>
    <string name="q3OperationText">Operation Text</string>
    <string name="q3BtnOption1">Opt1</string>
    <string name="q3BtnOption2">Opt2</string>
    <string name="q3BtnOption3">Opt3</string>
    <string name="q3Feedback" />

    <!-- Q4 -->
    <string name="q4Number">0</string>
    <string name="q4Label">Label</string>
    <string name="q4OperationText">Operation Text</string>
    <string name="q4BtnOption1">Opt1</string>
    <string name="q4BtnOption2">Opt2</string>
    <string name="q4BtnOption3">Opt3</string>
    <string name="q4Feedback" />

    <!-- Q5 -->
    <string name="q5Number">0</string>
    <string name="q5Label">Label</string>
    <string name="q5OperationText">Operation Text</string>
    <string name="q5OpText1">Text 1</string>
    <string name="q5OpText2">Text 2</string>
    <string name="q5Feedback" />

    <!-- Q6 -->
    <string name="q6Number">0</string>
    <string name="q6Label">Label</string>
    <string name="q6OperationText">Operation Text</string>
    <string name="q6BtnTrue">True</string>
    <string name="q6BtnFalse">False</string>
    <string name="q6Feedback" />

    <!-- Second Activity -->
    <string name="resultTitle">Results</string>
    <string name="scoreOverallLabel">Overall</string>
    <string name="totalScore">-</string>

    <string name="markLabel">Marks</string>
    <string name="wrongLabel">Wrong</string>

    <string name="wrongValue">-</string>
    <string name="retakeQuiz">Retake Quiz</string>
    <string name="showAnswers">Show Answers</string>
    <string name="showAnswersLabel">Answers:</string>
    <string name="showUserAnswersLabel">Yours:</string>


    <!-- Show Right Answers Section -->
    <string name="q1ShowAnswer">A1</string>
    <string name="q2ShowAnswer">A2</string>
    <string name="q3ShowAnswer">A3</string>
    <string name="q4ShowAnswer">A4</string>
    <string name="q5ShowAnswer">A5</string>
    <string name="q6ShowAnswer">A6</string>

    <!-- Show User Answers Section -->
    <string name="q1ShowUserAnswer">U1</string>
    <string name="q2ShowUserAnswer">U2</string>
    <string name="q3ShowUserAnswer">U3</string>
    <string name="q4ShowUserAnswer">U4</string>
    <string name="q5ShowUserAnswer">U5</string>
    <string name="q6ShowUserAnswer">U6</string>

    <!-- Show Correct & Incorrect Tags -->
    <string name="q1Tag">T1</string>
    <string name="q2Tag">T2</string>
    <string name="q3Tag">T3</string>
    <string name="q4Tag">T4</string>
    <string name="q5Tag">T5</string>
    <string name="q6Tag">T6</string>





</resources>