<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <!-- Overall Result Section -->
    <TextView
        android:id="@+id/resultTitle"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/resultTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Overall Label -->
    <TextView
        android:id="@+id/scoreOverallLabel"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scoreOverallLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultTitle" />

    <!-- Overall Value -->
    <TextView
        android:id="@+id/totalScore"
        style="@style/totalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:text="@string/totalScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreOverallLabel" />

    <!-- Marks Label -->
    <TextView
        android:id="@+id/marksLabel"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/markLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/wrongLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <!-- Mark Value -->
    <TextView
        android:id="@+id/marks"
        style="@style/markAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:text="@string/wrongValue"
        app:layout_constraintEnd_toEndOf="@+id/marksLabel"
        app:layout_constraintStart_toStartOf="@+id/marksLabel"
        app:layout_constraintTop_toBottomOf="@id/marksLabel" />

    <!-- Wrong Label -->
    <TextView
        android:id="@+id/wrongLabel"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/wrongLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />


    <!-- Wrong Value -->
    <TextView
        android:id="@+id/wrongAnswers"
        style="@style/wrongAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:text="@string/wrongValue"
        app:layout_constraintEnd_toEndOf="@+id/wrongLabel"
        app:layout_constraintStart_toStartOf="@+id/wrongLabel"
        app:layout_constraintTop_toBottomOf="@id/wrongLabel"  />


    <Button
        android:id="@+id/showAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btnPrimary"
        android:text="@string/showAnswers"
        app:layout_constraintBottom_toTopOf="@+id/btn_goto_main_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btn_goto_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingHorizontal="24dp"
        style="?attr/materialButtonOutlinedStyle"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/retakeQuiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="198dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="193dp" />


</androidx.constraintlayout.widget.ConstraintLayout>